unix/lang/tests/error/error_line_number.yab
#expect#---Error in error_line_number.yab, line 6: syntax error
#expect#   this does not compute :-/
#expect#        ^~~~
#expect#---Error: Program not executed

this does not compute :-/
